--- a/style.css
+++ b/style.css
@@ -61,4 +61,24 @@ header{
     color:#cccccc;
     font-weight:bold;
   }
+
+  /* Showcase */
+#showcase{
+    min-height:400px;
+    background:url('../img/showcase.jpg') no-repeat 0 -400px;
+    text-align:center;
+    color:#ffffff;
+  }
+  
+  #showcase h1{
+    margin-top:100px;
+    font-size:55px;
+    margin-bottom:10px;
+  }
+  
+  #showcase p{
+    font-size:20px;
+  }
+
+  
   
