--- a/style.css
+++ b/style.css
@@ -17,6 +17,15 @@ body{
     padding:0;
   }
 
+  .button_1{
+    height:38px;
+    background:#e8491d;
+    border:0;
+    padding-left: 20px;
+    padding-right:20px;
+    color:#ffffff;
+  }
+
   /* Header */
 header{
     background:#35424a;
@@ -80,5 +89,28 @@ header{
     font-size:20px;
   }
 
+  /* Newsletter */
+#newsletter{
+    padding:15px;
+    color:#ffffff;
+    background:#35424a
+  }
   
+  #newsletter h1{
+    float:left;
+  }
+  
+  #newsletter form {
+    float:right;
+    margin-top:15px;
+  }
+  
+  #newsletter input[type="email"]{
+    padding:4px;
+    height:25px;
+    width:250px;
+  }
+
+  
+
   
