--- a/style.css
+++ b/style.css
@@ -111,6 +111,22 @@ header{
     width:250px;
   }
 
+  /* Boxes */
+#boxes{
+    margin-top:20px;
+  }
+  
+  #boxes .box{
+    float:left;
+    text-align: center;
+    width:30%;
+    padding:10px;
+  }
+  
+  #boxes .box img{
+    width:90px;
+  }
+
   
 
   
