--- a/style.css
+++ b/style.css
@@ -127,6 +127,19 @@ header{
     width:90px;
   }
 
+
+  /* Footer */
+
+  footer{
+    padding:20px;
+    margin-top:20px;
+    color:#ffffff;
+    background-color:#e8491d;
+    text-align: center;
+  }
+
+  
+
   
 
   
