--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ body{
     color:#ffffff;
   }
 
+  .dark{
+    padding:15px;
+    background:#35424a;
+    color:#ffffff;
+    margin-top:10px;
+    margin-bottom:10px;
+  }
+
   /* Header */
 header{
     background:#35424a;
@@ -112,7 +120,7 @@ header{
   }
 
   /* Boxes */
-#boxes{
+    #boxes{
     margin-top:20px;
   }
   
@@ -127,6 +135,23 @@ header{
     width:90px;
   }
 
+  /* Sidebar */
+aside#sidebar{
+    float:right;
+    width:30%;
+    margin-top:10px;
+  }
+  
+  aside#sidebar .quote input, aside#sidebar .quote textarea{
+    width:90%;
+    padding:5px;
+  }
+  
+  /* Main-col */
+  article#main-col{
+    float:left;
+    width:65%;
+  }  
 
   /* Footer */
 
