--- a/style.css
+++ b/style.css
@@ -151,7 +151,17 @@ aside#sidebar{
   article#main-col{
     float:left;
     width:65%;
-  }  
+  }
+
+  /* Services */
+
+  ul#services li{
+    list-style: none;
+    padding:20px;
+    border: #cccccc solid 1px;
+    margin-bottom:5px;
+    background:#e6e6e6;
+  }
 
   /* Footer */
 
