--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ header{
   /* Showcase */
 #showcase{
     min-height:400px;
-    background:url('../img/showcase.jpg') no-repeat 0 -400px;
+    background:url('./img/showcase.jpg') no-repeat 0 -400px;
     text-align:center;
     color:#ffffff;
   }
